--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "zisay/solve",
-  "description": "A PHP framework born to solve user needs",
+  "description": "PHP Web Framework",
   "type": "project",
   "license": "Apache-2.0",
   "autoload": {
