新增 RESTful Api 接口设计

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   "minimum-stability": "dev",
   "require": {
     "php": ">=8.0",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "ext-curl": "*"
   },
   "repositories": {
     "packagist": {
