--- a/env/localhost.env
+++ b/env/localhost.env
@@ -4,6 +4,6 @@ DEBUG=true
 DEFAULT_DATABASE=mysql
 #【MySQL】
 MYSQL_HOST=127.0.0.1
-MYSQL_DBNAME=rack
+MYSQL_DBNAME=solve
 MYSQL_USER=root
 MYSQL_PWD=root
